syntax = 'proto3';
option go_package = "./gen";

// REQ's and RES's

message AuthenticationRequest {
  string session_id = 1;
}

message AuthenticationResponse {
  string user_id = 1;
}

service AuthService {
  rpc Authenticate(AuthenticationRequest) returns (AuthenticationResponse);
}

